main/default/objects/Compass_Capture__c/fields/Root_Cause_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Sub_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Cause Sub Category</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Compass Capture (Root Cause Sub Category)</relationshipLabel>
    <relationshipName>Compass_Capture_Root_Cause_Sub_Category</relationshipName>
    <type>Lookup</type>
</CustomField>