main/default/objects/Compass_Capture__c/fields/ServicesArea_of_Focus__c.field-meta.xml
<CustomField>
    <fullName>ServicesArea_of_Focus__c</fullName>
    <label>Services/Area of Focus</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>