main/default/objects/Compass_Capture__c/fields/Site_Value__c.field-meta.xml
<CustomField>
    <fullName>Site_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Value</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data_Value__c.Master_Data__c</field>
            <operation>equals</operation>
            <valueField>$Source.Site__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Compass Capture (Site Value)</relationshipLabel>
    <relationshipName>Site_Value</relationshipName>
    <type>Lookup</type>
</CustomField>