main/default/objects/Compass_Capture__c/fields/Source_1__c.field-meta.xml
<CustomField>
    <fullName>Source_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source 1</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Compass Capture</relationshipLabel>
    <relationshipName>Compass_Capture</relationshipName>
    <type>Lookup</type>
</CustomField>