main/default/objects/Compass_Capture__c/fields/Source_2__c.field-meta.xml
<CustomField>
    <fullName>Source_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source 2</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Compass Capture (Source 2)</relationshipLabel>
    <relationshipName>Compass_Capture1</relationshipName>
    <type>Lookup</type>
</CustomField>