main/default/objects/Compass_Capture__c/fields/Source_3__c.field-meta.xml
<CustomField>
    <fullName>Source_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source 3</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Compass Capture (Source 3)</relationshipLabel>
    <relationshipName>Compass_Capture2</relationshipName>
    <type>Lookup</type>
</CustomField>