main/default/objects/Compass_Capture__c/fields/Stakeholders_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders_Impacted__c</fullName>
    <label>Stakeholders Impacted</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>