main/default/objects/Compass_Capture__c/fields/State_del__c.field-meta.xml
<CustomField>
    <fullName>State_del__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>