main/default/objects/Compass_Capture__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>Mitigating</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Reviewed by Product Owner</fullName>
            </value>
            <value>
                <fullName>Approved by Product Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>