main/default/objects/Compass_Capture__c/fields/Taxonomy_Number__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy_Number__c</fullName>
    <label>Taxonomy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>