main/default/objects/Compass_Capture__c/fields/Type_Values__c.field-meta.xml
<CustomField>
    <fullName>Type_Values__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type Values</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Master_Data_Value__c.Master_Data__c</field>
            <operation>equals</operation>
            <valueField>$Source.Capture_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data_Value__c</referenceTo>
    <relationshipLabel>Compass Capture (Type Values)</relationshipLabel>
    <relationshipName>Type_Values</relationshipName>
    <type>Lookup</type>
</CustomField>