main/default/objects/Compass_Capture__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>