main/default/objects/Compass_Capture__c/fields/Vacancies__c.field-meta.xml
<CustomField>
    <fullName>Vacancies__c</fullName>
    <label>Vacancies</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>