main/default/objects/Compass_Capture__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <label>Who</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>