main/default/objects/Compass_Capture__c/fields/Why__c.field-meta.xml
<CustomField>
    <fullName>Why__c</fullName>
    <label>Why</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>