main/default/objects/Compass_Capture__c/fields/ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code__c</fullName>
    <label>ZIP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>