main/default/objects/Compass_Capture__c/recordTypes/Activity_Capture.recordType-meta.xml
<RecordType>
    <fullName>Activity_Capture</fullName>
    <active>true</active>
    <label>Activity Capture</label>
</RecordType>