main/default/objects/Compass_Capture__c/recordTypes/Organization_Capture.recordType-meta.xml
<RecordType>
    <fullName>Organization_Capture</fullName>
    <active>true</active>
    <label>Organization Capture</label>
</RecordType>