main/default/objects/Compass_Capture__c/recordTypes/Person_Capture.recordType-meta.xml
<RecordType>
    <fullName>Person_Capture</fullName>
    <active>true</active>
    <label>Person Capture</label>
</RecordType>