main/default/objects/Compass_Capture__c/recordTypes/Problem_Capture.recordType-meta.xml
<RecordType>
    <fullName>Problem_Capture</fullName>
    <active>true</active>
    <label>Problem Capture</label>
</RecordType>