main/default/objects/Compass_Capture__c/recordTypes/Process_Capture.recordType-meta.xml
<RecordType>
    <fullName>Process_Capture</fullName>
    <active>true</active>
    <label>Process Capture</label>
</RecordType>