main/default/objects/Compass_Capture__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Capture_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Campaign__c</columns>
    <columns>Capture_Description__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>