main/default/objects/Compass_Capture__c/listViews/All_Activity_Capture.listView-meta.xml
<ListView>
    <fullName>All_Activity_Capture</fullName>
    <columns>NAME</columns>
    <columns>Capture_Title__c</columns>
    <columns>Account__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compass_Capture__c.Activity_Capture</value>
    </filters>
    <label>All Activity Capture</label>
</ListView>