main/default/objects/Compass_Capture__c/listViews/All_Organization_Capture.listView-meta.xml
<ListView>
    <fullName>All_Organization_Capture</fullName>
    <columns>NAME</columns>
    <columns>Capture_Description__c</columns>
    <columns>Capture_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compass_Capture__c.Organization_Capture</value>
    </filters>
    <label>All Organization Capture</label>
</ListView>