main/default/objects/Compass_Capture__c/listViews/Department_of_Veteran_Affairs.listView-meta.xml
<ListView>
    <fullName>Department_of_Veteran_Affairs</fullName>
    <columns>NAME</columns>
    <columns>Capture_Title__c</columns>
    <columns>Capture_Description__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Department of Veterans Affairs</value>
    </filters>
    <label>Department of Veterans Affairs</label>
</ListView>