main/default/objects/Compass_Capture__c/listViews/Foundational_DCW_Build_Dependencies.listView-meta.xml
<ListView>
    <fullName>Foundational_DCW_Build_Dependencies</fullName>
    <columns>NAME</columns>
    <columns>Entity_Value_L1__c</columns>
    <columns>Capture_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Department of Veterans Affairs</value>
    </filters>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>Oracle Cerner Deployment CSR Compass Demo</value>
    </filters>
    <filters>
        <field>Type_Values__c</field>
        <operation>equals</operation>
        <value>Foundational DCW Build Dependency Validation</value>
    </filters>
    <label>Foundational DCW Build Dependencies</label>
</ListView>