main/default/objects/Compass_Capture__c/listViews/Pre_Go_Live_Assessment.listView-meta.xml
<ListView>
    <fullName>Pre_Go_Live_Assessment</fullName>
    <columns>NAME</columns>
    <columns>Functional_Clinical_Area_Value__c</columns>
    <columns>Entity_Value_L1__c</columns>
    <columns>Capture_Title__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_Values__c</field>
        <operation>equals</operation>
        <value>Assessment</value>
    </filters>
    <label>Pre-Conversion Readiness Assessment</label>
</ListView>