main/default/objects/Compass_Capture__c/listViews/Process_Capture.listView-meta.xml
<ListView>
    <fullName>Process_Capture</fullName>
    <columns>Type_Values__c</columns>
    <columns>NAME</columns>
    <columns>Capture_Title__c</columns>
    <columns>Account__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Compass_Capture__c.Process_Capture</value>
    </filters>
    <label>All Process Capture</label>
</ListView>