main/default/objects/Compass_Capture__c/listViews/Stakeholder_Engagement_Plan.listView-meta.xml
<ListView>
    <fullName>Stakeholder_Engagement_Plan</fullName>
    <columns>NAME</columns>
    <columns>Category_Value__c</columns>
    <columns>Site_Value__c</columns>
    <columns>Functional_Clinical_Area_Value__c</columns>
    <columns>Capture_Title__c</columns>
    <columns>Capture_Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_Values__c</field>
        <operation>equals</operation>
        <value>Stakeholder Engagement Plan</value>
    </filters>
    <label>Stakeholder Engagement Plan</label>
</ListView>